# LuckyGas-v3

./: .env  .env.example  .gcloudignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  ACCESSIBILITY_GUIDE.md  AGENT_COORDINATION_PLAYBOOK.md  API_DOCUMENTATION.md  API_KEY_SECURITY_PIPELINE_REPORT.md  API_KEY_SECURITY_TIMELINE.md  API_KEY_SETUP_MANUAL.md  ARCHITECTURAL_REVIEW_COMPLETION_PLAN.md  ASYNC_FIX_STATUS.md  AUTOMATED_PROGRESS_SUMMARY.md  AUXILIARY_FEATURES_COMPLETE.md  AUXILIARY_FEATURES_DESIGN.md  BACKEND_DATABASE_FIX.md  BACKEND_FRONTEND_INTEGRATION_ANALYSIS.md  BROWNFIELD_ARCHITECTURE_DOCUMENT.md  BUILD_VS_REBUILD_EVALUATION.md  CHANGELOG.md  CICD_GUIDE.md  CI_CD_FIXES_SUMMARY.md  CLAUDE.md  CLAUDE_OLD.md  CLEANUP_DEPLOYMENT_REPORT.md  CLEANUP_EXECUTION_SUMMARY.md  CLEANUP_REPORT.md  CODE_CLEANUP_PLAN 2.md  COMPACTION_FINAL_REPORT.md  COMPLETE_FIX_REPORT.md  COMPLETE_NETWORK_ERROR_SOLUTION.md  COMPREHENSIVE_TEST_REPORT.md  CONTRIBUTING.md  CREDIT_LIMIT_IMPLEMENTATION.md  CRITICAL_BLOCKER_VALIDATION_REPORT.md  CRITICAL_INFRASTRUCTURE_DISCOVERY.md  DASHBOARD_CONNECTION_FIX.md  DEPLOYMENT_CHECKLIST.md  (+173 more)
backend/: .coverage 2  .coveragerc 2  .dockerignore  .env  .env.example  .env.test  .gcloudignore  API-HANGING-ISSUE-RESOLUTION.md  API_ENHANCEMENTS_README.md  ARCHITECTURAL_TEST_REQUIREMENTS.md  ARCHITECTURE_HARDENING_REPORT.md  ARCHITECTURE_RECOMMENDATIONS.md  ARCHITECTURE_RECOMMENDATIONS_V2.md  ARCHITECTURE_REVIEW_REPORT.md  ASYNC_VS_SYNC_DECISION.md  BIGQUERY_BILLING_EXPORT_GUIDE.md  CI_CD_FIX_STATUS.md  CURRENT_BUILD_STATUS.md  DATABASE_SETUP.md  DELIVERY_HISTORY_UPDATE.md  DELIVERY_OPTIMIZATION_GUIDE.md  Dockerfile  Dockerfile.emergency  Dockerfile.production  Dockerfile.simple  EINVOICE_FIXES_SUMMARY.md  ENVIRONMENT_SETUP_COMPLETE.md  E_INVOICE_FIXES_REQUIRED.md  E_INVOICE_QA_REPORT.md  E_INVOICE_SECURITY_CHECKLIST.md  FE-INT_STATUS_REPORT.md  FINAL_INTEGRATION_VERIFICATION_REPORT.md  FLAKE8_FIX_SUMMARY.md  FRONTEND_PRODUCTION_ARCHITECTURE_REVIEW.md  GCP-INTEGRATION-ERRORS-RESOLUTION.md  GCP-SETUP_STATUS_REPORT.md  GCP_CREDENTIALS_ANALYSIS.md  GCP_SETUP_COMPLETE.md  GCP_SETUP_COMPLETION_SUMMARY.md  GCP_SETUP_GUIDE.md  (+163 more)
backend/.keys/: encrypted_keys.json  master.key
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  001_initial_schema 2.py  001_simplified_schema.py  002_add_delivery_date_column.py  005_fix_route_driver_foreign_key.py  006_add_banking_tables.py  006_add_security_fields_to_users.py  2024_01_20_add_sms_tables.py  2024_01_20_add_sync_operations_tables.py  2025_01_20_add_banking_sftp_tables.py  2025_01_20_add_notification_history.py  add_dashboard_performance_indexes.py
backend/alembic/versions_backup/: 002_orders_and_deliveries.py  003_invoicing_and_inventory.py  004_add_delivery_history_items.py  006_add_invoice_sequence.py  007_add_notification_tables.py  008_rename_metadata_columns.py  009_merge_branches.py  2024_01_20_add_feature_flag_tables.py  2024_01_20_add_sync_operations_tables.py  2025_01_20_add_banking_sftp_tables.py  2025_01_29_add_optimization_history.py  2c3d61a74090_initial_complete_schema.py  manual_add_flexible_gas_products.sql  performance_indexes.py
backend/app/: __init__.py  client_models.py  main.py  main_complex.py  main_comprehensive.py  main_simple.py  models.py  models_optimized.py  models_simple.py
backend/app/api/: deps.py  deps_simple.py  versioned_router.py
backend/app/core/: api_key_manager.py  api_monitoring.py  api_security.py  api_utils.py  banking_config.py  cache.py  cache_service.py  cache_simple.py  cloud_sql.py  config.py  config_loader.py  config_manager.py  config_production.py  (+29 more)
backend/chaos_results/: CHAOS_TEST_REPORT.md  chaos_test_summary.json
backend/cost_analysis_queries/: advanced_cost_analysis.sql
backend/docs/: API_ENHANCEMENTS.md  API_PATTERNS.md  BANKING_INTEGRATION.md  BANKING_SFTP_AUTOMATION.md  DEPLOYMENT.md  PRODUCTION_API_DEPLOYMENT.md  PRODUCTION_API_SUMMARY.md  REFACTORING_LOG.md  SMS_INTEGRATION_GUIDE.md
backend/examples/: socketio_client.py  test_enhanced_services.py
backend/infrastructure/: INFRASTRUCTURE_SETUP.md
backend/migrations/: add_customer_type_field.sql  add_route_name_column.sql  create_order_templates_table.sql  preserve_payment_data.py
backend/scripts/: create_admin_user.py  create_invoice_tables.py  create_test_users.py  fix_customer_schema.py  fix_customer_schema_complete.py  fix_route_schema.py  import_historical_data.py  run_financial_tests.py
backend/tests/: E2E_TEST_REPORT.md  PAYMENT_TEST_UPDATE_SUMMARY.md  PILOT_CERTIFICATION_SUMMARY.md  README 2.md  SPRINT_3_INTEGRATION_TEST_REPORT.md  VALIDATION_SPRINT_REPORT.md  __init__.py  check_mock_services.sh  conftest.py  conftest_payment.py  e2e_test_report.json  init_test_data 2.py  init_test_data.py  load_test_simple.py  run-integration-tests 2.sh  run_comprehensive_e2e_tests.py  run_epic7_tests 2.py  run_epic7_tests.py  run_integration_suite.py  run_integration_tests 2.py  run_integration_tests.py  start-test-env.sh  stop-test-env.sh  test_api_enhancements.py  test_auth.py  test_credit_limit.py  test_customers.py  test_data_validator.py  test_encoding_converter.py  test_env_setup.py  test_main.py  test_order_search.py  test_order_templates.py  test_orders.py  test_ortools_optimizer.py  test_routes.py  validate_mock_services 2.py  validate_mock_services.py  validate_mock_services_comprehensive 2.py  validate_mock_services_comprehensive.py  (+1 more)
(+1407 files in other folders)
