[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.10.0",
    "websockets>=12.0",
    "python-socketio>=5.11.0",
    "python-dotenv>=1.0.0",
    "ortools>=9.8.3296",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "python-json-logger>=2.0.7",
    "gcloud>=0.18.3",
]
