[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.1",
    "greenlet>=3.2.3",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "faker>=22.0.0",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.35.0",
    "uvloop>=0.17.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
    "scikit-learn>=1.3.2",
    "numpy>=1.24.0",
    "google-cloud-aiplatform>=1.38.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-storage>=2.10.0",
    "websockets>=12.0",
    "python-socketio>=5.11.0",
    "python-dotenv>=1.0.0",
    "ortools>=9.8.3296",
    # "prometheus-fastapi-instrumentator>=6.1.0",  # Removed - simplified monitoring
    "python-json-logger>=2.0.7",
    # "gcloud>=0.18.3",  # Removed - deprecated package
    # "gsutil>=5.35",  # Removed - command line tool
    "googlemaps>=4.10.0",
    "geopy>=2.4.1",
    "chardet>=5.2.0",
    # "playwright>=1.40.0",  # Removed - E2E testing in frontend only
    # "pytest-playwright>=0.4.3",  # Removed - E2E testing in frontend only
    "pyotp>=2.9.0",
    "qrcode>=7.4.2",
    "pillow>=10.2.0",
    "jinja2>=3.1.6",
    "pytest-json-report>=1.5.0",
    "aiofiles>=24.1.0",
    # "beautifulsoup4>=4.12.3",  # Removed - web scraping not needed
    # "paramiko>=3.5.1",  # Removed - SFTP not needed
    # "celery>=5.3.0",  # Removed - async task queue not needed
    # "python-gnupg>=0.5.2",  # Removed - GPG encryption not needed
    "pytz>=2024.1",
    # Contract Testing
    # "pact-python>=2.1.1",  # Removed - contract testing
    "prometheus-client>=0.22.1",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
  )/
)
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["migrations", ".venv", "build", "dist"]
known_first_party = ["app", "tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["migrations/", "tests/"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"]
exclude = [".git", "__pycache__", "dist", "build", "*.egg", "migrations", ".venv"]
per-file-ignores = ["__init__.py:F401"]
